Bug 124979 - Assert when saving versions
Summary: Assert when saving versions
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-26 11:31 UTC by Heiko Tietze
Modified: 2019-04-27 13:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2019-04-26 11:31:39 UTC
Writer (or Calc) > new file, save under some name > version > save new version > some text => crash

soffice.bin: /home/ht/Sources/libreoffice/vcl/unx/gtk3/gtk3gtkinst.cxx:6433: virtual void GtkInstanceTreeView::select(int): Assertion `gtk_tree_view_get_model(m_pTreeView) && "don't select when frozen"' failed.
warn:sfx.view:6016:6016:sfx2/source/view/viewfrm.cxx:3111: SID_SIDEBAR state requested, but no task pane child window exists for this ID!

Version: 6.3.0.0.alpha0+
Build ID: 4657335fa5bcbe7980f229ca41ddd82d93c355eb
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Commit Notification 2019-04-26 15:12:22 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c973fb47ef5692069a72211405f3716fade1763e%5E%21

Resolves: tdf#124979 don't select item while list frozen

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2019-04-27 13:36:55 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/dd8e9e7e271ce2d60a35a778ac265e8dda25c060%5E%21

Resolves: tdf#124979 don't select item while list frozen

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.