Resolves: tdf#124979 don't select item while list frozen

Change-Id: Ifbad7984223b8d18eb353ec773705b902cab7176
Reviewed-on: https://gerrit.libreoffice.org/71367
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>